apps/common/node-red/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-red-ui
  namespace: node-red
spec:
  selector:
    app: node-red
  type: LoadBalancer
  loadBalancerIP: "${nodered_web_ip}"
  ports:
    - name: node-red-ui
      port: 80
      protocol: TCP
      targetPort: node-red-ui
---
apiVersion: v1
kind: Service
metadata:
  name: node-red-syslog
  namespace: node-red
spec:
  selector:
    app: node-red
  type: LoadBalancer
  loadBalancerIP: "${nodered_syslog_ip}"
  ports:
    - name: node-red-syslog
      port: 514
      protocol: UDP
      targetPort: 514
---
apiVersion: v1
kind: Service
metadata:
  name: node-red-snmpv2
  namespace: node-red
spec:
  selector:
    app: node-red
  type: LoadBalancer
  loadBalancerIP: "${nodered_snmp_ip}"
  ports:
    - name: node-red-snmpv2
      port: 1161
      protocol: UDP
      targetPort: 1161
