apps/common/node-red/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: nodered-gateway
  namespace: node-red
spec:
  gatewayClassName: envoy
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "nodered.${domain}"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: "${APP}-tls-prod"
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: nodered
  namespace: node-red
spec:
  parentRefs:
    - name: nodered-gateway
  hostnames:
    - "nodered.${domain}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nodered-internal
          port: 80
