apps/common/node-red/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nodered
  namespace: node-red
spec:
  tls:
  - hosts:
    - nodered.internal.com
    secretName: internal-com-tls
  rules:
  - host: nodered.internal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodered-internal
            port:
              number: 80
  ingressClassName: nginx
