apps/common/node-red/allow-ext-egress-arpc.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-ext-egress-geolocator"
spec:
  endpointSelector:
    matchLabels:
      app: node-red
  egress:
  - toFQDNs:
    - matchPattern: "rdap.apnic.net"
