apps/common/node-red/allow-ext-egress-nidscheck-netpol.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-ext-egress-testnids"
spec:
  endpointSelector:
    matchLabels:
      app: node-red
  egress:
  - toFQDNs:
    - matchPattern: "testmynids.org"
