apps/common/node-red/allow-local-egress-adguard.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-local-egress-adguard"
spec:
  endpointSelector:
    matchLabels:
      app: node-red
  egress:
  - toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": adguard-home
        "app.kubernetes.io/name": adguard-home
