apps/common/node-red/allow-local-egress-cilium-netpol.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "cidr-rule"
spec:
  endpointSelector:
    matchLabels:
      app: node-red
  egress:
  - toCIDR:
    - 192.168.0.0/16
