apps/common/node-red/allow-local-egress-influxdb-netpol.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-local-egress-influxdb"
spec:
  endpointSelector:
    matchLabels:
      app: node-red
  egress:
    - toServices:
      - k8sService:
          serviceName: influxdb
          namespace: influxdb
