apps/common/node-red/allow-local-egress-loki-netpol.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "allow-local-egress-loki"
spec:
  endpointSelector:
    matchLabels:
      app: node-red
  egress:
  - toEndpoints:
    - matchLabels:
        "app": loki
        "k8s:io.kubernetes.pod.namespace": loki
